--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 
 <head>
@@ -15,7 +15,12 @@
   </header>
   
   <div class="container">
-
+    <table>
+      <thead>
+        <tr></tr>
+        <tr></tr>
+      </thead>
+    </table>
   </div>
   
   <footer>
