--- a/index.html
+++ b/index.html
@@ -17,7 +17,11 @@
   <div class="container">
     <table>
       <thead>
-        <tr></tr>
+        <tr>
+          <th>
+            <h1>Wine Festival Schedule</h1>
+          </th>
+        </tr>
         <tr></tr>
       </thead>
     </table>
